syntax = "proto3";
package snapchat.polls;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCP";
option csharp_namespace = "SnapProto.Snapchat.Polls";

import "google/protobuf/wrappers.proto";
import "snapchat/core/SCCOREUuid.proto";
import "snapchat/polls/SCPApi.proto";

message SCPCreatePollRequest {
    .snapchat.polls.SCPPollInfo pollInfo = 1;
}

message SCPCreatePollResponse {
    string pollId = 1;
    string error = 2;
    uint64 votingEndTime = 3;
}

message SCPGetPollRequest {
    string pollId = 1;
    bool includeVoterList = 2;
    string userId = 3;
}

message SCPGetPollResponse {
    .snapchat.polls.SCPPollInteractions interactions = 2;
    string error = 3;
    bool isCreator = 4;
}

message SCPPollInteractions {
    repeated uint32 selfVoteOptionIdsArray = 1;
    .google.protobuf.Int64Value selfVoteServerTimestampMs = 2;
    repeated .snapchat.polls.SCPPollInteractions.VoteCountsEntry voteCounts = 3;
    repeated .snapchat.polls.SCPPollInteractions.VoteCountRatiosEntry voteCountRatios = 4;
    repeated .snapchat.polls.SCPPollInteractions.VotersEntry voters = 5;
    message VoteCountsEntry {
        uint32 key = 1;
        uint64 value = 2;
    }
    message VoteCountRatiosEntry {
        uint32 key = 1;
        double value = 2;
    }
    message VotersEntry {
        uint32 key = 1;
        .snapchat.polls.SCPVoters value = 2;
    }
}

message SCPVoteRequest {
    string pollId = 1;
    repeated uint32 optionIdsArray = 2;
}

message SCPVoteResponse {
    .snapchat.polls.SCPPollInteractions interactions = 1;
    string error = 2;
}

message SCPVoter {
    .snapchat.core.SCCOREUUID uuid = 1;
    string displayName = 2;
    string mutableUsername = 3;
    string avatarId = 4;
    string selfieId = 5;
}

message SCPVoters {
    repeated .snapchat.polls.SCPVoter votersArray = 1;
}